# statwhy

./: README.html  README.md
cameleer/: cameleer.opam
cameleer/statwhy/lib/: alexandergovern.mlw  anderson.mlw  atomicFormulas.mlw  bartlett.mlw  binom.mlw  bws_test.mlw  cameleerBHL.mlw  cameleerReal.mlw  chi2_contingency.mlw  chisquare.mlw  cramervonmises.mlw  dune  dunnett.mlw  epps_singleton_2samp.mlw  fisher_exact.mlw  fligner.mlw  friedmanchisquare.mlw  ftest.mlw  hof.mlw  kruskal.mlw  ks.mlw  kurtosistest.mlw  levene.mlw  logicalFormula.mlw  mannwhitneyu.mlw  median_test.mlw  normality_test.mlw  oneway_ANOVA.mlw  power_divergence.mlw  quantile_test.mlw  ranksums.mlw  skewtest.mlw  statBHL.mlw  steel.mlw  steel_dwass.mlw  ttest.mlw  tukey_HSD.mlw  utility.mlw  wilcoxon.mlw  williams.mlw
cameleer/statwhy/lib/anderson/: why3session.xml
cameleer/statwhy/lib/atomicFormulas/: atomicFormulas_Ppl_eq_population_soundness_1.v  atomicFormulas_Ppl_eq_real_number_listqt_refl_1.v  atomicFormulas_Ppl_eq_real_number_listqt_refl_2.v  atomicFormulas_Ppl_eq_real_number_listqt_symm_1.v  atomicFormulas_Ppl_is_prob_dist_const_implies_is_prob_dist_const_4.v  why3session.xml
cameleer/statwhy/lib/binom/: why3session.xml
cameleer/statwhy/lib/logicalFormula/: logicalFormula_Dataset_scale_leq_antisymmetric_2.v  why3session.xml
cameleer/statwhy/lib/williams/: why3session.xml
examples/: compare_with_existing_drugs.ml  compare_with_existing_drugs.mlw  example1.ml  example1.mlw  example2.ml  example2.mlw  example3.ml  example3.mlw  example4.ml  example4.mlw  example5.ml  example5.mlw  example6.ml  example6.mlw
examples/executable_examples/: README.md  cameleerBHL.ml  cameleerBHL.mli  dune  example1.ml  example2.ml  example3.ml  example4.ml  example6.ml  ttest.ml  ttest.mli  tukey_HSD.ml  tukey_HSD.mli
examples/mlw/: ex_alexandergovern.mlw  ex_anderson.mlw  ex_bartlett.mlw  ex_binom.mlw  ex_chi2_contingency.mlw  ex_chisquare.mlw  ex_cramervonmises.mlw  ex_dunnett.mlw  ex_epps_singleton_2samp.mlw  ex_fisher_exact.mlw  ex_friedmanchisquare.mlw  ex_ftest.mlw  ex_kruskal.mlw  ex_ks.mlw  ex_kurtosistest.mlw  (+15 more)
(+2 files in other folders)
