(install
 (section share_root)
 (files
  (alexandergovern.mlw as why3/stdlib/alexandergovern.mlw)
  (anderson.mlw as why3/stdlib/anderson.mlw)
  (atomicFormulas.mlw as why3/stdlib/atomicFormulas.mlw)
  (bartlett.mlw as why3/stdlib/bartlett.mlw)
  (binom.mlw as why3/stdlib/binom.mlw)
  (cameleerBHL.mlw as why3/stdlib/cameleerBHL.mlw)
  (cameleerReal.mlw as why3/stdlib/cameleerReal.mlw)
  (chi2_contingency.mlw as why3/stdlib/chi2_contingency.mlw)
  (chisquare.mlw as why3/stdlib/chisquare.mlw)
  (cramervonmises.mlw as why3/stdlib/cramervonmises.mlw)
  (dunnett.mlw as why3/stdlib/dunnett.mlw)
  (epps_singleton_2samp.mlw as why3/stdlib/epps_singleton_2samp.mlw)
  (fisher_exact.mlw as why3/stdlib/fisher_exact.mlw)
  (fligner.mlw as why3/stdlib/fligner.mlw)
  (friedmanchisquare.mlw as why3/stdlib/friedmanchisquare.mlw)
  (hof.mlw as why3/stdlib/hof.mlw)
  (ftest.mlw as why3/stdlib/ftest.mlw)
  (kruskal.mlw as why3/stdlib/kruskal.mlw)
  (ks.mlw as why3/stdlib/ks.mlw)
  (kurtosistest.mlw as why3/stdlib/kurtosistest.mlw)
  (levene.mlw as why3/stdlib/levene.mlw)
  (logicalFormula.mlw as why3/stdlib/logicalFormula.mlw)
  (mannwhitneyu.mlw as why3/stdlib/mannwhitneyu.mlw)
  (median_test.mlw as why3/stdlib/median_test.mlw)
  (normality_test.mlw as why3/stdlib/normality_test.mlw)
  (oneway_ANOVA.mlw as why3/stdlib/oneway_ANOVA.mlw)
  (parcomp.mlw as why3/stdlib/parcomp.mlw)
  (power_divergence.mlw as why3/stdlib/power_divergence.mlw)
  (quantile_test.mlw as why3/stdlib/quantile_test.mlw)
  (ranksums.mlw as why3/stdlib/ranksums.mlw)
  (skewtest.mlw as why3/stdlib/skewtest.mlw)
  (statBHL.mlw as why3/stdlib/statBHL.mlw)
  (statELHT.mlw as why3/stdlib/statELHT.mlw)
  (steel.mlw as why3/stdlib/steel.mlw)
  (steel_dwass.mlw as why3/stdlib/steel_dwass.mlw)
  (ttest.mlw as why3/stdlib/ttest.mlw)
  (tukey_HSD.mlw as why3/stdlib/tukey_HSD.mlw)
  (utility.mlw as why3/stdlib/utility.mlw)
  (wilcoxon.mlw as why3/stdlib/wilcoxon.mlw)
  (williams.mlw as why3/stdlib/williams.mlw))
(package cameleer))
